--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
 asgiref==3.8.1
 black==24.10.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
+crispy-bootstrap5==2024.2
+cryptography==43.0.3
+defusedxml==0.7.1
 Django==5.1.2
+django-allauth==65.2.0
+django-crispy-forms==2.2
+idna==3.10
+isodate==0.7.2
+lxml==5.3.0
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.6
+pycparser==2.22
+PyJWT==2.9.0
+python3-openid==3.2.0
+python3-saml==1.16.0
+requests==2.32.3
+requests-oauthlib==2.0.0
 sqlparse==0.5.1
+urllib3==2.2.3
+xmlsec==1.3.14
